correction of letter spacing in a P tag element

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ img {
   p{
     margin-top: 1em;
     color: hsl(236, 13%, 42%);
-    letter-spacing: -2.1px;
+    letter-spacing: -2px;
     margin-bottom: 2em;
   }
   
